Refractored tests